<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.geekykel.alc4phase1challenge.ProfileActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/alc"
        android:scaleType="fitXY"
        android:text="@string/welcome_to_alc"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:gravity="center">

        <Button
            android:id="@+id/about_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/buttonstylewithgradient"
            android:padding="16dp"
            android:text="@string/about_button"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/profile_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/buttonstylewithgradient"
            android:padding="16dp"
            android:text="@string/profile_button"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="#FFFFFF" />

    </LinearLayout>

</LinearLayout>